package simpleJGE;

public class Button {

}
