package simpleJGE;

public class Label {
}
