package simpleJGE;

public class MultiLabel {
}
