package simpleJGE;

public class Scroller {
}
