package simpleJGE;

public class Sound {
}
