package simpleJGE;

public class Sprite {
}
