package simpleJGE;

public class Spritesheet {
}
