package simpleJGE;

public class Timer {
}
