package simpleJGE;

public class TxtInput {
}
